# interlock

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  NOTICE  README.md  SECURITY.md  policy.json  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: adapter_proposal.yml  bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml
docs/: REPO_SETUP.md
experiments/hermes-negative-control/: Dockerfile  README.md  TESTPLAN.md  policy.json  run.sh  run_arm.py  stub_model.py
interlock/: __init__.py  audit.py  ledger.py  pipeline.py  service.py  types.py  wire.py
interlock/adapters/: __init__.py  base.py  pdp_client.py
interlock/adapters/hermes/: README.md  __init__.py  liveness.py  plugin.py  plugin.yaml
interlock/adapters/openclaw/: README.md  agent.mjs  mock_openclaw.js  package.json  pdp_client.js  plugin.js  runaway_demo.py
interlock/adapters/openclaw/test/: liveness.test.js  (+1 more)
interlock/authorizers/: __init__.py  base.py  human.py  policy.py
interlock/filters/: __init__.py  base.py  gatekeeper.py  rate_limiter.py
interlock/store/: __init__.py  session_store.py  state_store.py
scripts/: check_no_runtime_deps.py
tests/: mock_hermes.py  test_approval_arm.py  test_audit.py  test_authorizers.py  test_concurrency.py  test_e2e_openclaw.py  test_gatekeeper.py  test_handshake.py  test_hermes_adapter.py  test_ledger.py  test_pdp_client.py  test_pipeline.py  test_rate_limiter.py  test_service.py  test_stub_model.py  test_types.py  test_wire.py
